RESOLVED FIXED 246892
caretRangeFromPoint returns bad results near input type checkbox or radio in Strict Mode
https://bugs.webkit.org/show_bug.cgi?id=246892
Summary caretRangeFromPoint returns bad results near input type checkbox or radio in ...
Ahmad Saleem
Reported 2022-10-21 16:58:39 PDT
Hi Team, While going to Blink Commits, I came across following commit, where Safari Technology Preview 156 still fail one sub-test: Commit - https://src.chromium.org/viewvc/blink?view=revision&revision=157506 Chrome Bug - https://bugs.chromium.org/p/chromium/issues/detail?id=256989 Failing Test Case Fiddle - https://jsfiddle.net/y15x3nth/show ________ We have to update following - https://github.com/WebKit/WebKit/blob/05f04306d2dc59ca6b5c255a6e31483799daf9f8/Source/WebCore/rendering/RenderBlock.cpp#L2211 So I wanted to create this bug for merging this and fixing this bug. Thanks!
Attachments
EWS
Comment 1 2022-10-22 15:53:12 PDT
Committed 255886@main (806c01fc8661): <https://commits.webkit.org/255886@main> Reviewed commits have been landed. Closing PR #5662 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2022-10-22 15:54:16 PDT
Note You need to log in before you can comment on or make changes to this bug.