caretRangeFromPoint returns bad results near input type checkbox or radio in Strict Mode

caretRangeFromPoint returns bad results near input type checkbox or radio in Strict Mode
https://bugs.webkit.org/show_bug.cgi?id=246892

Reviewed by Ryosuke Niwa.

Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=157506

This patch changes RenderBlock::positionForPoint() to check out of bound position. When document is no quirk mode, RenderBlock::positionForPoint() gets a position which is out side of RenderBlock due by condition in RenderBlock::positionForPointWithInlineChildren().

* Source/WebCore/rendering/RenderBlock.cpp:
(RenderBlock::positionForPoint): Add Out of Bound checks
* LayoutTests/fast/dom/Document/CaretRangeFromPoint/caretRangeFromPoint-in-strict-mode-with-checkbox.html: Added Test Case
* LayoutTests/fast/dom/Document/CaretRangeFromPoint/caretRangeFromPoint-in-strict-mode-with-checkbox-expected.txt: Added Test Case Expectations

Canonical link: https://commits.webkit.org/255886@main